# authz-service/src/main/kotlin/com/nagarro/auth/entity/Account.kt
@@ -1,4 +1,4 @@
-package com.nagarro.stockservice.data
+package com.nagarro.auth.entity
 
 import org.bson.types.ObjectId
 import org.springframework.boot.autoconfigure.domain.EntityScan
@@ -7,11 +7,9 @@ import org.springframework.data.mongodb.core.mapping.Document
 
 @Document
 @EntityScan
-data class Stock(
+data class Account(
     @Id
     val id: ObjectId = ObjectId.get(),
-    var code: String = "",
-    var name: String = "",
-    var value: Double = 0.0,
-    var description: String = ""
+    val user: ObjectId,
+    val totalValue: Double = 0.0,
 )
