# user-service/src/main/kotlin/com/nagarro/user/entity/ApplicationUser.kt
@@ -1,15 +1,0 @@
-package com.nagarro.user.entity
-
-import org.bson.types.ObjectId
-import org.springframework.data.annotation.Id
-import org.springframework.data.mongodb.core.index.Indexed
-import org.springframework.data.mongodb.core.mapping.Document
-
-@Document
-data class ApplicationUser(
-    @Id
-    var id: ObjectId = ObjectId.get(),
-    @Indexed(unique = true)
-    var username: String = "",
-    var password: String = "",
-)
